:rocket: It's HTML File.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="I_W">This color means Ideal BMI</div>
             </div>
             <h3>Get your BMI result below</h3>
-            <div class="show"></div>
+            <div class="get-result"></div>
         </section>
         
         <script src="app.js"></script>
